<resources>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="pref_remember_me">Remember Me</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="username_error">Username is required</string>
    <string name="password_required_error">Password is required</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_title">Charity Place Finder Login</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="user_name">Enter username</string>
    <string name="email_address">Email</string>
    <string name="back_to_login_page">Back to login</string>
    <string name="pref_code_storage" translatable="false" />
    <string name="pref_reset_name" translatable="false" />
    <string name="pref_reset_email" translatable="false" />
    <string name="email_required_error">Email is required</string>
    <string name="invalid_email_error">Invalid email found</string>
    <string name="yes">Yes</string>
    <string name="title_activity_reset_password">Reset Password?</string>
    <string name="confirm_reset_password">Confirm reset password?</string>
    <string name="no">No</string>
    <string name="registration">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_a_member_login_here">Back to login</string>
    <string name="minimum_8_message">Minimum of 8 characters is required</string>
    <string name="password_confirmation_required_error">Please confirm password</string>
    <string name="password_no_match_error">Passwords do not match</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register_text">Register here</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_hints">Enter email that you wish to reset password on</string>
    <string name="change_language_setting">Change language</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Log Out</string>
    <string name="logout_setting">Log Out</string>
    <string name="change_language">Change language</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="nav_header_title" translatable="false">Charity Place Finder</string>
    <string name="app_name" translatable="false">Charity Place Finder</string>
    <string name="forget_password_instruction">Enter email address to reset password</string>
</resources>
