<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="30sp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:layout_marginBottom="3dp"
            android:textSize="17sp"
            android:text="@string/forgot_password_text"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:id="@+id/emailAddForgotPassword"
            android:padding="10dp"
            android:drawablePadding="13dp"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            tools:ignore="TextFields" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resetPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="25dp"
            android:visibility="visible"
            android:text="@string/reset_password"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:layout_marginBottom="3dp"
            android:textSize="17sp"
            android:text="@string/back_to_login_page"
            android:id="@+id/backToLogin"
            />

    </LinearLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>


</RelativeLayout>