<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="45sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/email_address"
            android:textSize="24sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:id="@+id/emailRegister"
            android:padding="10dp"
            android:drawablePadding="13dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:id="@+id/passwordRegister"
            android:drawablePadding="13dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/confirm_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/confirm_password"
            android:textSize="24sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:id="@+id/confirmPasswordRegister"
            android:drawablePadding="13dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/registerButtonr"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_text"
            android:visibility="visible" />

        <TextView
            android:id="@+id/loginForRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/already_a_member_login_here"
            android:textAlignment="center"
            android:textSize="17sp" />

    </LinearLayout>


</RelativeLayout>