<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="#fff"
    android:foregroundGravity="center"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textAlignment="center"


            android:textSize="45sp" />

        <EditText
            android:id="@+id/userNameLogin"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textView"

            android:layout_centerInParent="true"

            android:layout_gravity="center"
            android:layout_marginTop="40dp"


            android:drawablePadding="13dp"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/passwordLogin"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/userNameLogin"

            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"


            android:drawablePadding="13dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />


        <CheckBox
            android:id="@+id/rememberPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"

            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/remember_me" />


        <TextView
            android:id="@+id/forgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberPasswordLogin"
            android:layout_marginStart="60dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/register_text"
            android:layout_weight="0"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/register_text"
            style="@android:style/Widget.Holo.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/rememberPasswordLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/register_text" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLogin"
            android:layout_centerInParent="true"
            android:layout_gravity="center"

            android:layout_marginTop="20dp"

            android:layout_marginBottom="4dp"
            android:text="@string/login"
            android:visibility="visible" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true" />


</RelativeLayout>